# super-simple-stock-market

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  stocks.cpp
src/include/: market.h  stocks.h
unit-tests/: CMakeLists.txt  catch.hpp  stocks_test.cpp
